Add Desktop Commander MCP to multiverse configuration

--- a/multiverse-config.json
+++ b/multiverse-config.json
@@ -42,6 +42,10 @@
       "env": {
         "LINEAR_API_KEY": "${LINEAR_API_KEY}"
       }
+    },
+    "desktop-commander": {
+      "command": "npx",
+      "args": ["-y", "@wonderwhy-er/desktop-commander"]
     }
   }
 }
