--- a/configs/zed-config.json
+++ b/configs/zed-config.json
@@ -35,6 +35,18 @@
         "path": "npx",
         "args": ["-y", "supergateway", "--sse", "http://localhost:9006/sse"]
       }
+    },
+    "context7": {
+      "command": {
+        "path": "npx",
+        "args": ["-y", "supergateway", "--sse", "http://localhost:9007/sse"]
+      }
+    },
+    "prisma": {
+      "command": {
+        "path": "npx",
+        "args": ["-y", "supergateway", "--sse", "http://localhost:9009/sse"]
+      }
     }
   }
 }
